force-app/main/default/objects/Programme_and_Event_Data__c/Programme_and_Event_Data__c.object-meta.xml
<CustomObject>
    <label>Programme and Event Data</label>
    <nameField>
        <label>Programme or Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programme and Event Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>