force-app/main/default/objects/Programme_and_Event_Data__c/fields/Organisation_Role__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Role__c</fullName>
    <label>Organisation Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>