force-app/main/default/objects/Programme_and_Event_Data__c/fields/Outcome_Category__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Category__c</fullName>
    <label>Outcome Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clubs Adults</fullName>
            </value>
            <value>
                <fullName>Clubs Young People</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>Events Adults</fullName>
            </value>
            <value>
                <fullName>Events Young People</fullName>
            </value>
            <value>
                <fullName>FMS &amp; BSS</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Primary Schools</fullName>
            </value>
            <value>
                <fullName>Regional Organisations</fullName>
            </value>
            <value>
                <fullName>Secondary Schools</fullName>
            </value>
            <value>
                <fullName>Stakeholders</fullName>
            </value>
            <value>
                <fullName>Volunteers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>