force-app/main/default/objects/Programme_and_Event_Data__c/fields/Programme_or_Event_Name2__c.field-meta.xml
<CustomField>
    <fullName>Programme_or_Event_Name2__c</fullName>
    <label>Programme or Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>