force-app/main/default/objects/Programme_and_Event_Data__c/fields/Programme_or_Event_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Programme_or_Event_Name_1__c</fullName>
    <formula>If(CONTAINS($User.Profile_Name__c,&apos;Partner&apos;),
HYPERLINK(&quot;/partners/a15/e?cancelURL=partners/&quot;+Id+&quot;&amp;CF00Np0000000zu6h_lkid=&quot;+Id+&quot;&amp;CF00Np0000000zu6h=&quot;+Name, Name),HYPERLINK(&quot;/a15/e?cancelURL=&quot;+Id+&quot;&amp;CF00Np0000000zu6h_lkid=&quot;+Id+&quot;&amp;CF00Np0000000zu6h=&quot;+Name, Name))</formula>
    <label>Membership Category</label>
    <type>Text</type>
</CustomField>