force-app/main/default/objects/Programme_and_Event_Data__c/fields/Programme_or_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Programme_or_Event_Name__c</fullName>
    <formula>If(CONTAINS($User.Profile_Name__c,&apos;Partner&apos;), 
HYPERLINK(&quot;/partners/apex/Programme_Event_Participation?id=&quot;+Id, Name ,&quot;_self&quot;),HYPERLINK(&quot;/apex/Programme_Event_Participation?id=&quot; +Id, Name ,&quot;_self&quot;))</formula>
    <label>Programme or Event Name</label>
    <type>Text</type>
</CustomField>