force-app/main/default/objects/Programme_and_Event_Data__c/fields/Related_Project__c.field-meta.xml
<CustomField>
    <fullName>Related_Project__c</fullName>
    <inlineHelpText>Some organisations group their programmes within projects or categories. This feature is for your convenience only. If you don&apos;t use &apos;projects&apos; you could use this field to categorise your programmes by type. We only recommend this if it might be useful</inlineHelpText>
    <label>Related Project</label>
    <length>100</length>
    <type>Text</type>
</CustomField>