force-app/main/default/objects/Programme_and_Event_Data__c/validationRules/Valid_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_End_Date</fullName>
    <active>true</active>
    <description>End Date should be not be before Start Date</description>
    <errorConditionFormula>End_Date__c  &lt;   Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date should be not be before Start Date</errorMessage>
</ValidationRule>